--- a/ch07_layout/src/main/res/layout/activity_main.xml
+++ b/ch07_layout/src/main/res/layout/activity_main.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center_horizontal"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <ImageView
@@ -18,14 +18,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:layout_gravity="center_horizontal"
         android:text="02-120"
         android:textSize="40dp" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <GridLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
+        android:layout_marginTop="30dp"
+        android:columnCount="3"
         android:orientation="horizontal">
 
         <TextView
@@ -36,8 +36,6 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="1"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
 
@@ -49,30 +47,21 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="2"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_row="1"
+            android:layout_column="1"
             android:paddingLeft="40dp"
             android:paddingTop="10dp"
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="3"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -82,8 +71,6 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="4"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
 
@@ -95,8 +82,6 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="5"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
 
@@ -107,18 +92,9 @@
             android:paddingTop="10dp"
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
-            android:text="6"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
+            android:text="6zzzzzzz"
             android:textSize="30dp"
             android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -128,21 +104,19 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="7"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_rowSpan="2"
+            android:layout_columnSpan="2"
             android:paddingLeft="40dp"
             android:paddingTop="10dp"
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="8"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
 
@@ -154,17 +128,8 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="9"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
@@ -174,8 +139,6 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="*"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
 
@@ -187,8 +150,6 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="0"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
 
@@ -200,28 +161,45 @@
             android:paddingRight="40dp"
             android:paddingBottom="10dp"
             android:text="#"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:textSize="30dp"
             android:textStyle="bold" />
-    </LinearLayout>
+    </GridLayout>
 
-    <ImageView
-        android:id="@+id/icon_video"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/video" />
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp">
 
-    <ImageView
-        android:id="@+id/icon_call"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/call" />
+        <ImageView
+            android:id="@+id/icon_video"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="30dp"
+            android:src="@drawable/video" />
 
-    <ImageView
-        android:id="@+id/icon_back"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/back" />
+        <ImageView
+            android:id="@+id/icon_call"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_toRightOf="@id/icon_video"
+            android:src="@drawable/call" />
+
+        <ImageView
+            android:id="@+id/icon_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginLeft="30dp"
+            android:layout_toRightOf="@id/icon_call"
+            android:src="@drawable/back" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@id/icon_back"
+            android:layout_alignParentRight="true"
+            android:layout_toRightOf="@id/icon_back"
+            android:text="button"
+            android:textSize="32dp" />
+    </RelativeLayout>
 
 </LinearLayout>
