--- a/ch11_jetpack/src/main/res/layout/fragment_one.xml
+++ b/ch11_jetpack/src/main/res/layout/fragment_one.xml
@@ -4,12 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ff0000"
+    android:id="@+id/oneFragment"
     tools:context=".OneFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+<!--    코틀린 코드에서 조작하기 위해 id 반드시 부여-->
+    <Button
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:id="@+id/frag_button"
         android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
