--- a/ch11_jetpack/src/main/res/layout/fragment_two.xml
+++ b/ch11_jetpack/src/main/res/layout/fragment_two.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--리사이클러 뷰 태그-->
+<androidx.recyclerview.widget.RecyclerView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#00ff00"
+    android:id="@+id/recyclerView"
     tools:context=".TwoFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
 
-</FrameLayout>
+
+</androidx.recyclerview.widget.RecyclerView>
+<com.google.android.material.floatingactionbutton.ExtendFloatingActionButton
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Add Item"
+/>
