--- a/ch11_jetpack/src/main/res/layout/fragment_two.xml
+++ b/ch11_jetpack/src/main/res/layout/fragment_two.xml
@@ -12,8 +12,8 @@
 
 
 </androidx.recyclerview.widget.RecyclerView>
-<com.google.android.material.floatingactionbutton.ExtendFloatingActionButton
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Add Item"
-/>
+<!--<com.google.android.material.floatingactionbutton.ExtendFloatingActionButton-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:text="Add Item"-->
+<!--/>-->
