--- a/ch08_event/src/main/res/layout/activity_main.xml
+++ b/ch08_event/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:gravity="center_horizontal"
         android:textSize="60dp"/>
 
+<!--        layout_alignParentBottom: 부모 태그 안 아래에 배치-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
