--- a/ch11_jetpack/src/main/res/layout/activity_main.xml
+++ b/ch11_jetpack/src/main/res/layout/activity_main.xml
@@ -1,12 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.viewpager2.widget.ViewPager2 xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/viewpager"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
+<!--    뷰 페이저 태그-->
+<!--    layout_weight를 활용하여 tab부터 배치하고 배치-->
+    <androidx.viewpager2.widget.ViewPager2
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:id="@+id/viewpager">
+    </androidx.viewpager2.widget.ViewPager2>
 
+<!--    tab 버튼 태그-->
+    <com.google.android.material.tabs.TabLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tabs" />
 
-</androidx.viewpager2.widget.ViewPager2>
+</LinearLayout>
