--- a/ch11_jetpack/src/main/res/layout/fragment_two.xml
+++ b/ch11_jetpack/src/main/res/layout/fragment_two.xml
@@ -1,19 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--리사이클러 뷰 태그-->
-<androidx.recyclerview.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#00ff00"
-    android:id="@+id/recyclerView"
     tools:context=".TwoFragment">
 
+<!--    리사이클러 뷰 태그-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/recyclerView"
+        android:background="#00ff00" >
+    </androidx.recyclerview.widget.RecyclerView>
 
+<!--    플로팅 액션 버튼 태그-->
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/main_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:icon="@android:drawable/ic_input_add"
+        android:text="Add Item"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"/>
 
-</androidx.recyclerview.widget.RecyclerView>
-<!--<com.google.android.material.floatingactionbutton.ExtendFloatingActionButton-->
-<!--    android:layout_width="wrap_content"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:text="Add Item"-->
-<!--/>-->
+</RelativeLayout>
