--- a/ch10_dialog/src/main/res/values/themes.xml
+++ b/ch10_dialog/src/main/res/values/themes.xml
@@ -1,5 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
+
+<!--    NoActionBar 지우기-->
     <style name="Base.Theme.MyFirstApplication" parent="Theme.Material3.DayNight">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
