--- a/ch10_dialog/src/main/res/layout/activity_main.xml
+++ b/ch10_dialog/src/main/res/layout/activity_main.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--드로어 레이아웃 (원래 화면, 드로어 화면 반드시 두 개의 자식 필요)-->
 <androidx.drawerlayout.widget.DrawerLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -71,5 +73,7 @@
         app:headerLayout="@layout/nevigation_header"
         app:menu="@menu/menu_navigation"
         />
-    <!-- layout_gravity="start": 화면 왼쪽에 숨겨지도록 -->
+    <!-- layout_gravity="start": 화면 왼쪽에 숨겨지도록 (start, end) -->
+<!--    headerLayout="@layout/nevigation_header: res/layout/nevigation_header.xml 연결-->
+<!--    menu="@menu/menu_navigation": res/menu/menu_navigation.xml 연결-->
 </androidx.drawerlayout.widget.DrawerLayout>
