--- a/ch18_image/src/main/res/layout/item_comment.xml
+++ b/ch18_image/src/main/res/layout/item_comment.xml
@@ -53,4 +53,16 @@
         android:text="정말 스릴넘치는 영화였어요. 한 번 더 보고 싶은 영화!!!"
         android:textSize="14dp" />
 
+    <ImageView
+        android:id="@+id/itemImageView"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:visibility="gone" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="5dp"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="20dp"
+        android:background="@color/black"/>
+
 </LinearLayout>
