--- a/ch18_image/src/main/res/layout/activity_php.xml
+++ b/ch18_image/src/main/res/layout/activity_php.xml
@@ -5,6 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="나이를 입력하세요.."
+        android:id="@+id/etAge" />
     <Button
         android:id="@+id/btnPhp"
         android:layout_width="match_parent"
