--- a/ch18_image/src/main/res/menu/menu_navigation.xml
+++ b/ch18_image/src/main/res/menu/menu_navigation.xml
@@ -2,6 +2,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
+        android:id="@+id/item_php"
+        android:icon="@android:drawable/ic_menu_agenda"
+        android:title="php 불러오기" />
+    <item
         android:id="@+id/item_board"
         android:icon="@android:drawable/ic_menu_agenda"
         android:title="게시판" />
